src/test/resources/invalid/NonCapitalStateName.sc
/* (c) https://github.com/MontiCore/monticore */
statechart NonCapitalStateName {
  state engineOff;              
  state EngineRunning;
}